fix(list): bottom bar could sometimes cover list
Specifically, the footer would half cover the bottom buttons when more
users are loaded.

#60

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -333,7 +333,7 @@ background-color:#FA0000}
 #page {
     height: auto;
     overflow: none;
-    padding: 38px 25px 10px;
+    padding: 38px 25px;
 }
 
 #page p {
